--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
