--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,7 +8,7 @@ uvicorn~=0.18.2
 djantic~=0.7.0
 websockets~=10.3
 
-ariadne~=0.15.1
+ariadne~=0.16.1
 pydantic~=1.9.1
 asgiref~=3.5.2
 starlette~=0.19.1
@@ -47,3 +47,4 @@ Pygments~=2.12.0
 urllib3~=1.26.10
 pycparser~=2.21
 setuptools~=60.2.0
+fastapi_utils==0.2.1
